<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".KryptoActivity">

    <androidx.appcompat.widget.Toolbar
    android:id="@+id/kryptoBar"
    android:layout_width="match_parent"
    android:layout_height="?attr/actionBarSize"
    android:background="?attr/colorPrimary"
    android:textAlignment="center"
    android:backgroundTint="?detailsColor"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="1.0"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/inputLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/kryptoBar"
        app:layout_constraintVertical_bias="1.0">

        <LinearLayout
            android:id="@+id/kryptorLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Switch
                android:id="@+id/modeSiwtch"
                android:layout_width="323dp"
                android:layout_height="38dp"
                android:layout_gravity="center"
                android:layout_marginStart="44dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="44dp"
                android:onClick="switchMode"
                android:textColor="?textColor"
                android:text="@string/encryption_mode" />

            <EditText
                android:id="@+id/outText"
                android:layout_width="match_parent"
                android:layout_height="236dp"
                android:layout_marginStart="44dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="44dp"
                android:clickable="false"
                android:gravity="top"
                android:cursorVisible="false"
                android:ems="10"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:inputType="textMultiLine"
                android:textColor="?detailsColor" />

            <LinearLayout
                android:id="@+id/buttonsLayout"
                android:layout_width="match_parent"
                android:layout_height="74dp"
                android:layout_gravity="center"
                android:layout_weight="0"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/share_button"
                    android:layout_width="60dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="44dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:backgroundTint="?buttonColor"
                    android:drawableLeft="@drawable/ic_share_black_24dp"
                    android:drawableTint="?buttonIconColor"
                    android:textColor="@color/white"
                    android:gravity="center"
                    android:onClick="buttonShare"
                    android:text="@string/share_button" />

                <Button
                    android:id="@+id/copy_button"
                    android:layout_width="60dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="44dp"
                    android:layout_weight="1"
                    android:backgroundTint="?buttonColor"
                    android:drawableLeft="@drawable/ic_content_copy_black_24dp"
                    android:drawableTint="?buttonIconColor"
                    android:textColor="@color/white"
                    android:gravity="center"
                    android:onClick="buttonCopy"
                    android:text="@string/copy_button" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/menubutton"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="56dp"
        android:layout_height="38dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:background="?detailsColor"
        android:drawableEnd="@drawable/ic_settings_black_24dp"
        android:onClick="openSettings"
        android:title="@string/action_settings"
        app:layout_constraintBottom_toBottomOf="@+id/kryptoBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <LinearLayout
        android:id="@+id/inputLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="bottom"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

        <EditText
            android:id="@+id/inText"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_gravity="bottom"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="2dp"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/inHint"
            android:inputType="textPersonName"
            android:textColor="?detailsColor"
            android:textColorHint="?detailsColor" />

        <Button
            android:id="@+id/kryptoButton"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="bottom"
            android:layout_marginStart="12dp"
            android:layout_weight="0"
            android:backgroundTint="?buttonColor"
            android:drawableLeft="@drawable/ic_send_black_24dp"
            android:drawableTint="?buttonIconColor"
            android:onClick="translate" />

    </LinearLayout>

    <TextView
    android:id="@+id/toolbar_title"
    android:layout_width="254dp"
    android:layout_height="54dp"
    android:layout_gravity="center_horizontal"
    android:layout_marginTop="12dp"
    android:text="@string/app_name"
    android:textAlignment="center"
    android:textColor="@color/darkGray"
    android:textSize="30sp"
    app:layout_constraintBottom_toBottomOf="@+id/kryptoBar"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="@+id/kryptoBar" />

</androidx.constraintlayout.widget.ConstraintLayout>