<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/kryptoBar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:textAlignment="center"
        android:backgroundTint="@color/colorAccent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/kryptoBar"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:id="@+id/settingsLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Switch
                android:id="@+id/copy_switch"
                android:layout_width="323dp"
                android:layout_height="38dp"
                android:layout_gravity="center"
                android:layout_marginStart="44dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="44dp"
                android:onClick="switchCopy"
                android:text="@string/copy_switch" />

            <Switch
                android:id="@+id/share_switch"
                android:layout_width="323dp"
                android:layout_height="43dp"
                android:layout_gravity="center"
                android:layout_marginStart="44dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="44dp"
                android:onClick="switchShare"
                android:text="@string/share_switch" />

            <Switch
                android:id="@+id/remove_switch"
                android:layout_width="323dp"
                android:layout_height="43dp"
                android:layout_gravity="center"
                android:layout_marginStart="44dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="44dp"
                android:onClick="switchRemove"
                android:text="@string/remove_switch" />

            <LinearLayout
                android:id="@+id/modeLayout"
                android:layout_width="match_parent"
                android:layout_height="67dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/modeLabel"
                    android:layout_width="110dp"
                    android:layout_height="43dp"
                    android:layout_marginStart="44dp"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="@string/default_mode"
                    android:textAlignment="textStart"  />

                <Spinner
                    android:id="@+id/modeBox"
                    android:layout_width="181dp"
                    android:layout_height="43dp"
                    android:layout_marginStart="32dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="44dp"
                    android:entries="@array/mode_spinner"
                    android:textColor="@color/textColor"
                    app:layout_constraintStart_toStartOf="parent" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/languageLayout"
                android:layout_width="match_parent"
                android:layout_height="62dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/langLabel"
                    android:layout_width="110dp"
                    android:layout_height="43dp"
                    android:layout_marginStart="44dp"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="@string/lang_label"
                    android:textAlignment="textStart" />

                <Spinner
                    android:id="@+id/langBox"
                    android:layout_width="181dp"
                    android:layout_height="43dp"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="44dp"
                    android:entries="@array/language_spinner" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/themelayout"
                android:layout_width="match_parent"
                android:layout_height="63dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/themeLabel"
                    android:layout_width="110dp"
                    android:layout_height="43dp"
                    android:layout_marginStart="44dp"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="@string/theme_label"
                    android:textAlignment="textStart" />

                <Spinner
                    android:id="@+id/themeBox"
                    android:layout_width="181dp"
                    android:layout_height="43dp"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="44dp"
                    android:entries="@array/theme_spinner" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/mainLayout"
                android:layout_width="match_parent"
                android:layout_height="66dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="110dp"
                    android:layout_height="43dp"
                    android:layout_marginStart="44dp"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="@string/main_color"
                    android:textAlignment="textStart" />

                <EditText
                    android:id="@+id/mainColor"
                    android:layout_width="140dp"
                    android:layout_height="43dp"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="10dp"
                    android:ems="10"
                    android:enabled="false"
                    android:inputType="textPersonName" />

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="29dp"
                    android:layout_height="43dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="44dp"
                    android:foreground="@color/colorPrimary"
                    app:srcCompat="@android:drawable/checkbox_off_background" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/secondaryLayout"
                android:layout_width="match_parent"
                android:layout_height="69dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="110dp"
                    android:layout_height="43dp"
                    android:layout_marginStart="44dp"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="@string/secondary_color"
                    android:textAlignment="textStart" />

                <EditText
                    android:id="@+id/secondaryColor"
                    android:layout_width="140dp"
                    android:layout_height="43dp"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="10dp"
                    android:ems="10"
                    android:enabled="false"
                    android:inputType="textPersonName" />

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="29dp"
                    android:layout_height="43dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="44dp"
                    android:foreground="@color/colorPrimaryDark"
                    app:srcCompat="@android:drawable/checkbox_off_background" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/accentLayout"
                android:layout_width="match_parent"
                android:layout_height="69dp"
                android:gravity="center"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="110dp"
                    android:layout_height="43dp"
                    android:layout_marginStart="44dp"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="@string/accent_color"
                    android:textAlignment="textStart" />

                <EditText
                    android:id="@+id/accentColor"
                    android:layout_width="140dp"
                    android:layout_height="43dp"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="10dp"
                    android:ems="10"
                    android:enabled="false"
                    android:inputType="textPersonName" />

                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="29dp"
                    android:layout_height="43dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="44dp"
                    android:foreground="@color/colorAccent"
                    app:srcCompat="@android:drawable/checkbox_off_background" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/buttonLayout"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:gravity="center"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="110dp"
                    android:layout_height="43dp"
                    android:layout_marginStart="44dp"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="@string/button_color"
                    android:textAlignment="textStart" />

                <EditText
                    android:id="@+id/buttonColor"
                    android:layout_width="140dp"
                    android:layout_height="43dp"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="10dp"
                    android:ems="10"
                    android:enabled="false"
                    android:inputType="textPersonName" />

                <ImageView
                    android:id="@+id/imageView6"
                    android:layout_width="29dp"
                    android:layout_height="43dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="44dp"
                    android:foreground="@color/buttonText"
                    app:srcCompat="@android:drawable/checkbox_off_background" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/textLayout"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="110dp"
                    android:layout_height="43dp"
                    android:layout_marginStart="44dp"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="@string/text_color"
                    android:textAlignment="textStart" />

                <EditText
                    android:id="@+id/textColor"
                    android:layout_width="140dp"
                    android:layout_height="43dp"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="10dp"
                    android:ems="10"
                    android:enabled="false"
                    android:inputType="textPersonName"
                    android:textColor="@color/textColor" />

                <ImageView
                    android:id="@+id/imageView5"
                    android:layout_width="29dp"
                    android:layout_height="43dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="44dp"
                    android:foreground="@color/textColor"
                    android:textColor="@color/textColor"
                    app:srcCompat="@android:drawable/checkbox_off_background" />
            </LinearLayout>

            <Button
                android:id="@+id/confirmButton"
                android:layout_width="125dp"
                android:layout_height="53dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:backgroundTint="@color/colorPrimaryDark"
                android:enabled="false"
                android:text="@string/accept"
                android:textColor="@color/buttonText" />

        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/returnbutton"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="56dp"
        android:layout_height="38dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:background="@color/colorAccent"
        android:drawableStart="@drawable/ic_arrow_back_black_24dp"
        android:onClick="returnCrypto"
        android:title="@string/action_settings"
        app:layout_constraintBottom_toBottomOf="@+id/kryptoBar"
        app:layout_constraintStart_toStartOf="@+id/kryptoBar"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/toolbar_title"
        android:layout_width="254dp"
        android:layout_height="54dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="12dp"
        android:text="@string/action_settings"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@+id/kryptoBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/kryptoBar" />

</androidx.constraintlayout.widget.ConstraintLayout>